--- a/register.html
+++ b/register.html
@@ -176,25 +176,16 @@
   <!-- Registration Form -->
   <section class="register" id="registerSection">
     <h2>Loyalty Points Registration</h2>
-   <form id="loyaltyForm">
-  <input type="text" id="name" placeholder="Your Full Name" required />
-  <input type="tel" id="phone" placeholder="Phone Number" required />
-  <input type="email" id="email" placeholder="Email Address (optional)" />
-  <input type="password" id="regPassword" placeholder="Set Loyalty Password" required />
-  <button type="submit">Register</button>
-</form> 
+    <form id="loyaltyForm">
+      <input type="text" id="name" placeholder="Your Full Name" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="email" id="email" placeholder="Email Address (optional)" />
+      <input type="password" id="regPassword" placeholder="Set Loyalty Password" required />
+      <button type="submit">Register</button>
+    </form> 
   </section>
 
-<!-- Login Form -->
-<section class="register" id="loginSection">
-  <h2>Loyalty Login</h2>
-  <input type="tel" id="loginPhone" placeholder="Phone Number" required />
-  <input type="password" id="loginPassword" placeholder="Password" required />
-  <button onclick="loginUser()">Login</button>
-</section>
-
-
-  <!-- Ads Section (hidden initially) -->
+  <!-- Ads Section -->
   <section class="ads" id="adsSection" style="display: none;">
     <div class="ads-container" id="adsContainer">
       <div class="ad-slide">🔥 20% OFF First Cut</div>
@@ -214,17 +205,126 @@
     <button onclick="acceptPrivacy()">Accept</button>
   </div>
 
+  <!-- Password Modal -->
+  <div id="passwordModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; align-items:center; justify-content:center;">
+    <div style="background:white; padding:20px; border-radius:10px; width:90%; max-width:300px; text-align:center;">
+      <h3>Enter Loyalty Password</h3>
+      <input type="password" id="loyaltyPassword" placeholder="Password" style="width:100%; padding:10px; margin:10px 0;" />
+      <div style="display:flex; justify-content:space-between; gap:10px;">
+        <button onclick="checkPassword()" style="flex:1; padding:10px; background:#222; color:white; border:none; border-radius:5px;">Submit</button>
+        <button onclick="closePasswordModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
+      </div>
+      <p id="passwordError" style="color:red; font-size:0.9em; display:none; margin-top:10px;">Incorrect password. Try again.</p>
+      <button onclick="resetLoyaltyAccess()" style="margin-top:15px; background:none; border:none; color:#007BFF; text-decoration:underline; cursor:pointer; font-size:0.9em;">Forgot Password?</button>
+    </div>
+  </div>
+
   <script>
+    const scriptURL = "https://script.google.com/macros/s/AKfycby7lT5Nth0mndPlaFwULx-qhS_I-ejiKk8uPFVTYVUmXazxcCeRp8r1jVr_18wMfffz4Q/exec";
+    const form = document.getElementById("loyaltyForm");
+
+    // Register client
+    form.addEventListener("submit", e => {
+      e.preventDefault();
+      const name = document.getElementById("name").value;
+      const phone = document.getElementById("phone").value;
+      const email = document.getElementById("email").value;
+      const regPassword = document.getElementById("regPassword").value;
+
+      const data = { name, phone, email, password: regPassword };
+
+      fetch(scriptURL, {
+        method: "POST",
+        body: JSON.stringify(data),
+        headers: { "Content-Type": "application/json" }
+      })
+      .then(response => {
+        if (response.ok) {
+          alert("Thank you! You are now registered.");
+          localStorage.setItem("registeredClient", "yes");
+          localStorage.setItem("loyaltyPassword", regPassword);
+          localStorage.setItem("registeredPhone", phone);
+          form.reset();
+          document.getElementById("registerSection").style.display = "none";
+          document.getElementById("adsSection").style.display = "block";
+        } else {
+          alert("Error: Registration failed. Try again.");
+        }
+      })
+      .catch(error => {
+        console.error("Error!", error.message);
+        alert("Could not connect. Please try again.");
+      });
+    });
+
+    // Show ads if already registered
+    if (localStorage.getItem("registeredClient") === "yes") {
+      document.getElementById("registerSection").style.display = "none";
+      document.getElementById("adsSection").style.display = "block";
+    }
+
+    // Password Protection
+    const cookieName = "loyaltyAccess";
+
+    function setCookie(name, value, days) {
+      const d = new Date();
+      d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000));
+      document.cookie = `${name}=${value};expires=${d.toUTCString()};path=/`;
+    }
+
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      return parts.length === 2 ? parts.pop().split(';').shift() : "";
+    }
+
+    function handleLoyaltyClick() {
+      const hasAccess = getCookie(cookieName);
+      if (hasAccess === "true") {
+        scrollToRegister();
+      } else {
+        openPasswordModal();
+      }
+    }
+
+    function openPasswordModal() {
+      document.getElementById("passwordModal").style.display = "flex";
+      document.getElementById("loyaltyPassword").value = "";
+      document.getElementById("passwordError").style.display = "none";
+    }
+
+    function closePasswordModal() {
+      document.getElementById("passwordModal").style.display = "none";
+    }
+
+    function checkPassword() {
+      const input = document.getElementById("loyaltyPassword").value;
+      const savedPassword = localStorage.getItem("loyaltyPassword");
+
+      if (input === savedPassword) {
+        setCookie(cookieName, "true", 7);
+        closePasswordModal();
+        scrollToRegister();
+      } else {
+        document.getElementById("passwordError").style.display = "block";
+      }
+    }
+
+    function scrollToRegister() {
+      document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
+    }
+
     function resetLoyaltyAccess() {
-  localStorage.removeItem("loyaltyPassword");
-  localStorage.removeItem("registeredClient");
-  document.cookie = "loyaltyAccess=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-  alert("Password reset. Please register again.");
-  document.getElementById("registerSection").style.display = "block";
-  document.getElementById("adsSection").style.display = "none";
-  document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
-}
-    // Ad Slide Logic
+      localStorage.removeItem("loyaltyPassword");
+      localStorage.removeItem("registeredClient");
+      document.cookie = "loyaltyAccess=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+      alert("Password reset. Please register again.");
+      document.getElementById("registerSection").style.display = "block";
+      document.getElementById("adsSection").style.display = "none";
+      scrollToRegister();
+    }
+
+    // Ads Slider
     let currentIndex = 0;
     const totalSlides = 3;
     const adsContainer = document.getElementById("adsContainer");
@@ -248,7 +348,7 @@
 
     setInterval(nextSlide, 5000);
 
-    // Privacy popup logic
+    // Privacy Popup
     function acceptPrivacy() {
       document.getElementById("privacyPopup").classList.remove("show");
       localStorage.setItem("acceptedPrivacy", "yes");
@@ -257,285 +357,6 @@
     if (!localStorage.getItem("acceptedPrivacy")) {
       document.getElementById("privacyPopup").classList.add("show");
     }
-
-    // Loyalty Registration via Google Sheets
-    const scriptURL = "https://script.google.com/macros/s/AKfycbxt7vdSQ24rlO5WBMgfzoivMfsopJPdkF2_ne4EHNf8pMlpe5JJfjrHw6TFKEBOn0fHPg/exec";
-    const form = document.getElementById("loyaltyForm");
-
-form.addEventListener("submit", e => {
-  e.preventDefault();
-  const name = document.getElementById("name").value;
-  const phone = document.getElementById("phone").value;
-  const email = document.getElementById("email").value;
-  const regPassword = document.getElementById("regPassword").value;
-
-  const data = { name, phone, email };
-
-  fetch(scriptURL, {
-    method: "POST",
-    body: JSON.stringify(data),
-  })
-  .then(response => {
-    if (response.ok) {
-      alert("Thank you! You are now registered.");
-      localStorage.setItem("registeredClient", "yes");
-      localStorage.setItem("loyaltyPassword", regPassword); // ✅ Save password
-      form.reset();
-      document.getElementById("registerSection").style.display = "none";
-      document.getElementById("adsSection").style.display = "block";
-    } else {
-      alert("Error: Registration failed. Try again.");
-    }
-  })
-  .catch(error => {
-    console.error("Error!", error.message);
-    alert("Could not connect. Please try again.");
-  });
-});
-
-  fetch(scriptURL, {
-    method: "POST",
-    body: JSON.stringify(data),
-  })
-  .then(response => {
-    if (response.ok) {
-      alert("Thank you! You are now registered.");
-      localStorage.setItem("registeredClient", "yes");
-      localStorage.setItem("loyaltyPassword", regPassword); // Save password locally
-      form.reset();
-      document.getElementById("registerSection").style.display = "none";
-      document.getElementById("adsSection").style.display = "block";
-    } else {
-      alert("Error: Registration failed. Try again.");
-    }
-  })
-  .catch(error => {
-    console.error("Error!", error.message);
-    alert("Could not connect. Please try again.");
-  });
-});
-      const data = {
-        name: document.getElementById("name").value,
-        phone: document.getElementById("phone").value,
-        email: document.getElementById("email").value
-      };
-
-      fetch(scriptURL, {
-        method: "POST",
-        body: JSON.stringify(data),
-      })
-      .then(response => {
-        if (response.ok) {
-          alert("Thank you! You are now registered.");
-          localStorage.setItem("registeredClient", "yes");
-          form.reset();
-          document.getElementById("registerSection").style.display = "none";
-          document.getElementById("adsSection").style.display = "block";
-        } else {
-          alert("Error: Registration failed. Try again.");
-        }
-      })
-      .catch(error => {
-        console.error("Error!", error.message);
-        alert("Could not connect. Please try again.");
-      });
-    });
-
-    // If already registered, show ads
-    if (localStorage.getItem("registeredClient") === "yes") {
-      document.getElementById("registerSection").style.display = "none";
-      document.getElementById("adsSection").style.display = "block";
-    }
   </script>
-  <script>
-  
-  const cookieName = "loyaltyAccess";
-
-  function setCookie(name, value, days) {
-    const d = new Date();
-    d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000));
-    const expires = "expires=" + d.toUTCString();
-    document.cookie = `${name}=${value};${expires};path=/`;
-  }
-
-  function getCookie(name) {
-    const value = `; ${document.cookie}`;
-    const parts = value.split(`; ${name}=`);
-    if (parts.length === 2) return parts.pop().split(';').shift();
-    return "";
-  }
-
-  function handleLoyaltyClick() {
-    const hasAccess = getCookie(cookieName);
-    if (hasAccess === "true") {
-      scrollToRegister();
-    } else {
-      openPasswordModal();
-    }
-  }
-
-  function openPasswordModal() {
-    document.getElementById("passwordModal").style.display = "flex";
-    document.getElementById("loyaltyPassword").value = "";
-    document.getElementById("passwordError").style.display = "none";
-  }
-
-  function closePasswordModal() {
-    document.getElementById("passwordModal").style.display = "none";
-  }
-
-  function checkPassword() {
-  const input = document.getElementById("loyaltyPassword").value;
-  const savedPassword = localStorage.getItem("loyaltyPassword");
-
-  if (input === savedPassword) {
-    setCookie(cookieName, "true", 7);
-    closePasswordModal();
-    scrollToRegister();
-  } else {
-    document.getElementById("passwordError").style.display = "block";
-  }
-}
-
-  function scrollToRegister() {
-    document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
-  }
-  </script>
-  
-  <!-- Password Prompt Modal -->
-<div id="passwordModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; align-items:center; justify-content:center;">
-  <div style="background:white; padding:20px; border-radius:10px; width:90%; max-width:300px; text-align:center;">
-    <h3>Enter Loyalty Password</h3>
-    <input type="password" id="loyaltyPassword" placeholder="Password" style="width:100%; padding:10px; margin:10px 0;" />
-    <div style="display:flex; justify-content:space-between; gap:10px;">
-      <button onclick="checkPassword()" style="flex:1; padding:10px; background:#222; color:white; border:none; border-radius:5px;">Submit</button>
-      <button onclick="closePasswordModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
-    </div>
-    <p id="passwordError" style="color:red; font-size:0.9em; display:none; margin-top:10px;">Incorrect password. Try again.</p>
-    <button onclick="resetLoyaltyAccess()" style="margin-top:15px; background:none; border:none; color:#007BFF; text-decoration:underline; cursor:pointer; font-size:0.9em;">Forgot Password?</button>
-  </div>
-</div>
-
-<script>
-const scriptURL = "https://script.google.com/macros/s/AKfycby7lT5Nth0mndPlaFwULx-qhS_I-ejiKk8uPFVTYVUmXazxcCeRp8r1jVr_18wMfffz4Q/exec";
-const form = document.getElementById("loyaltyForm");
-
-// Show ads if already registered
-if (localStorage.getItem("registeredClient") === "yes") {
-  document.getElementById("registerSection").style.display = "none";
-  document.getElementById("adsSection").style.display = "block";
-}
-
-// Form submission handler
-form.addEventListener("submit", e => {
-  e.preventDefault();
-  const name = document.getElementById("name").value;
-  const phone = document.getElementById("phone").value;
-  const email = document.getElementById("email").value;
-  const regPassword = document.getElementById("regPassword").value;
-
-  const data = { name, phone, email, password: regPassword };
-
-  fetch(scriptURL, {
-    method: "POST",
-    body: JSON.stringify(data),
-    headers: { "Content-Type": "application/json" }
-  })
-  .then(response => {
-    if (response.ok) {
-      alert("Thank you! You are now registered.");
-      localStorage.setItem("registeredClient", "yes");
-      localStorage.setItem("loyaltyPassword", regPassword);
-      localStorage.setItem("registeredPhone", phone);
-      form.reset();
-      document.getElementById("registerSection").style.display = "none";
-      document.getElementById("adsSection").style.display = "block";
-    } else {
-      alert("Error: Registration failed. Try again.");
-    }
-  })
-  .catch(error => {
-    console.error("Error!", error.message);
-    alert("Could not connect. Please try again.");
-  });
-});
-
-// Forgot Password
-function forgotPassword() {
-  const phone = prompt("Enter your phone number:");
-  if (!phone) return;
-
-  fetch(`${scriptURL}?phone=${encodeURIComponent(phone)}`)
-    .then(res => res.text())
-    .then(password => {
-      if (password === "Not found") {
-        alert("Phone not found.");
-      } else {
-        alert("Your password is: " + password);
-      }
-    })
-    .catch(() => alert("Error retrieving password"));
-}
-</script>
-
-
-
-
-
-<script>
-const loginScriptURL = "https://script.google.com/macros/s/AKfycby7lT5Nth0mndPlaFwULx-qhS_I-ejiKk8uPFVTYVUmXazxcCeRp8r1jVr_18wMfffz4Q/exec";
-
-function loginUser() {
-  const phone = document.getElementById("loginPhone").value;
-  const password = document.getElementById("loginPassword").value;
-
-  if (!phone || !password) {
-    alert("Please enter both phone number and password.");
-    return;
-  }
-
-  fetch(`${loginScriptURL}?phone=${encodeURIComponent(phone)}`)
-    .then(res => res.text())
-    .then(savedPassword => {
-      if (savedPassword === "Not found") {
-        alert("Phone not found.");
-      } else if (savedPassword === password) {
-        alert("Login successful!");
-        document.getElementById("loginSection").style.display = "none";
-        document.getElementById("registerSection").style.display = "none";
-        document.getElementById("adsSection").style.display = "block";
-        localStorage.setItem("registeredClient", "yes");
-      } else {
-        alert("Incorrect password.");
-      }
-    })
-    .catch(() => alert("Error retrieving login details"));
-}
-</script>
-
-
-<script>
-function forgotPassword() {
-  const phone = prompt("Enter your phone number:");
-  if (!phone) return;
-
-  fetch(`${scriptURL}?phone=${encodeURIComponent(phone)}`)
-    .then(res => res.text())
-    .then(password => {
-      if (password === "Not found") {
-        alert("Phone not found.");
-      } else {
-        alert("Your password is: " + password);
-        // Re-register the user to trigger access
-        localStorage.setItem("registeredClient", "yes");
-        document.getElementById("registerSection").style.display = "none";
-        document.getElementById("loginSection").style.display = "none";
-        document.getElementById("adsSection").style.display = "block";
-      }
-    })
-    .catch(() => alert("Error retrieving password"));
-}
-</script>
-
 </body>
 </html>
