--- a/register.html
+++ b/register.html
@@ -215,7 +215,7 @@
         <button onclick="closePasswordModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
       </div>
       <p id="passwordError" style="color:red; font-size:0.9em; display:none; margin-top:10px;">Incorrect password. Try again.</p>
-      <button onclick="resetLoyaltyAccess()" style="margin-top:15px; background:none; border:none; color:#007BFF; text-decoration:underline; cursor:pointer; font-size:0.9em;">Forgot Password?</button>
+      <button onclick="forgotPassword()">Forgot Password?</button>
     </div>
   </div>
 
