--- a/register.html
+++ b/register.html
@@ -256,10 +256,11 @@
     form.addEventListener("submit", e => {
       e.preventDefault();
       const data = {
-        name: document.getElementById("name").value,
-        phone: document.getElementById("phone").value,
-        email: document.getElementById("email").value
-      };
+  name: document.getElementById("name").value,
+  phone: document.getElementById("phone").value,
+  email: document.getElementById("email").value,
+  password: document.getElementById("regPassword").value
+};
 
       fetch(scriptURL, {
         method: "POST",
