--- a/register.html
+++ b/register.html
@@ -176,16 +176,16 @@
   <!-- Registration Form -->
   <section class="register" id="registerSection">
     <h2>Loyalty Points Registration</h2>
-   <form id="loyaltyForm">
-  <input type="text" id="name" placeholder="Your Full Name" required />
-  <input type="tel" id="phone" placeholder="Phone Number" required />
-  <input type="email" id="email" placeholder="Email Address (optional)" />
-  <input type="password" id="regPassword" placeholder="Set Loyalty Password" required />
-  <button type="submit">Register</button>
-</form> 
+    <form id="loyaltyForm">
+      <input type="text" id="name" placeholder="Your Full Name" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="email" id="email" placeholder="Email Address (optional)" />
+      <input type="password" id="regPassword" placeholder="Set Loyalty Password" required />
+      <button type="submit">Register</button>
+    </form>
   </section>
 
-  <!-- Ads Section (hidden initially) -->
+  <!-- Ads Section -->
   <section class="ads" id="adsSection" style="display: none;">
     <div class="ads-container" id="adsContainer">
       <div class="ad-slide">🔥 20% OFF First Cut</div>
@@ -205,17 +205,63 @@
     <button onclick="acceptPrivacy()">Accept</button>
   </div>
 
+  <!-- Password Prompt Modal -->
+  <div id="passwordModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; align-items:center; justify-content:center;">
+    <div style="background:white; padding:20px; border-radius:10px; width:90%; max-width:300px; text-align:center;">
+      <h3>Enter Loyalty Password</h3>
+      <input type="password" id="loyaltyPassword" placeholder="Password" style="width:100%; padding:10px; margin:10px 0;" />
+      <div style="display:flex; justify-content:space-between; gap:10px;">
+        <button onclick="checkPassword()" style="flex:1; padding:10px; background:#222; color:white; border:none; border-radius:5px;">Submit</button>
+        <button onclick="closePasswordModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
+      </div>
+      <p id="passwordError" style="color:red; font-size:0.9em; display:none; margin-top:10px;">Incorrect password. Try again.</p>
+    </div>
+  </div>
+
   <script>
-    function resetLoyaltyAccess() {
-  localStorage.removeItem("loyaltyPassword");
-  localStorage.removeItem("registeredClient");
-  document.cookie = "loyaltyAccess=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
-  alert("Password reset. Please register again.");
-  document.getElementById("registerSection").style.display = "block";
-  document.getElementById("adsSection").style.display = "none";
-  document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
-}
-    // Ad Slide Logic
+    const scriptURL = "https://script.google.com/macros/s/AKfycbxt7vdSQ24rlO5WBMgfzoivMfsopJPdkF2_ne4EHNf8pMlpe5JJfjrHw6TFKEBOn0fHPg/exec";
+    const form = document.getElementById("loyaltyForm");
+
+    form.addEventListener("submit", e => {
+      e.preventDefault();
+      const data = {
+        name: document.getElementById("name").value,
+        phone: document.getElementById("phone").value,
+        email: document.getElementById("email").value,
+        password: document.getElementById("regPassword").value
+      };
+
+      fetch(scriptURL, {
+        method: "POST",
+        body: JSON.stringify(data),
+        headers: {
+          "Content-Type": "application/json"
+        }
+      })
+      .then(response => {
+        if (response.ok) {
+          alert("Thank you! You are now registered.");
+          localStorage.setItem("registeredClient", "yes");
+          localStorage.setItem("loyaltyPassword", data.password);
+          form.reset();
+          document.getElementById("registerSection").style.display = "none";
+          document.getElementById("adsSection").style.display = "block";
+        } else {
+          alert("Error: Registration failed. Try again.");
+        }
+      })
+      .catch(error => {
+        console.error("Error!", error.message);
+        alert("Could not connect. Please try again.");
+      });
+    });
+
+    if (localStorage.getItem("registeredClient") === "yes") {
+      document.getElementById("registerSection").style.display = "none";
+      document.getElementById("adsSection").style.display = "block";
+    }
+
+    // Ads slider
     let currentIndex = 0;
     const totalSlides = 3;
     const adsContainer = document.getElementById("adsContainer");
@@ -239,7 +285,7 @@
 
     setInterval(nextSlide, 5000);
 
-    // Privacy popup logic
+    // Privacy popup
     function acceptPrivacy() {
       document.getElementById("privacyPopup").classList.remove("show");
       localStorage.setItem("acceptedPrivacy", "yes");
@@ -249,173 +295,55 @@
       document.getElementById("privacyPopup").classList.add("show");
     }
 
-    // Loyalty Registration via Google Sheets
-    const scriptURL = "https://script.google.com/macros/s/AKfycbxt7vdSQ24rlO5WBMgfzoivMfsopJPdkF2_ne4EHNf8pMlpe5JJfjrHw6TFKEBOn0fHPg/exec";
-    const form = document.getElementById("loyaltyForm");
+    // Password Protection Logic
+    const cookieName = "loyaltyAccess";
 
-    form.addEventListener("submit", e => {
-      e.preventDefault();
-      const data = {
-  name: document.getElementById("name").value,
-  phone: document.getElementById("phone").value,
-  email: document.getElementById("email").value,
-  password: document.getElementById("regPassword").value
-};
+    function setCookie(name, value, days) {
+      const d = new Date();
+      d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000));
+      document.cookie = `${name}=${value};expires=${d.toUTCString()};path=/`;
+    }
 
-      fetch(scriptURL, {
-        method: "POST",
-        body: JSON.stringify(data),
-      })
-      .then(response => {
-        if (response.ok) {
-          alert("Thank you! You are now registered.");
-          localStorage.setItem("registeredClient", "yes");
-          form.reset();
-          document.getElementById("registerSection").style.display = "none";
-          document.getElementById("adsSection").style.display = "block";
-        } else {
-          alert("Error: Registration failed. Try again.");
-        }
-      })
-      .catch(error => {
-        console.error("Error!", error.message);
-        alert("Could not connect. Please try again.");
-      });
-    });
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      return parts.length === 2 ? parts.pop().split(';').shift() : "";
+    }
 
-    // If already registered, show ads
-    if (localStorage.getItem("registeredClient") === "yes") {
-      document.getElementById("registerSection").style.display = "none";
-      document.getElementById("adsSection").style.display = "block";
+    function handleLoyaltyClick() {
+      const hasAccess = getCookie(cookieName);
+      if (hasAccess === "true") {
+        scrollToRegister();
+      } else {
+        openPasswordModal();
+      }
+    }
+
+    function openPasswordModal() {
+      document.getElementById("passwordModal").style.display = "flex";
+      document.getElementById("loyaltyPassword").value = "";
+      document.getElementById("passwordError").style.display = "none";
+    }
+
+    function closePasswordModal() {
+      document.getElementById("passwordModal").style.display = "none";
+    }
+
+    function checkPassword() {
+      const input = document.getElementById("loyaltyPassword").value;
+      const saved = localStorage.getItem("loyaltyPassword");
+      if (input === saved) {
+        setCookie(cookieName, "true", 7);
+        closePasswordModal();
+        scrollToRegister();
+      } else {
+        document.getElementById("passwordError").style.display = "block";
+      }
+    }
+
+    function scrollToRegister() {
+      document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
     }
   </script>
-  <script>
-  const correctPassword = "cut2025"; // your password
-  const cookieName = "loyaltyAccess";
-
-  function setCookie(name, value, days) {
-    const d = new Date();
-    d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000));
-    const expires = "expires=" + d.toUTCString();
-    document.cookie = `${name}=${value};${expires};path=/`;
-  }
-
-  function getCookie(name) {
-    const value = `; ${document.cookie}`;
-    const parts = value.split(`; ${name}=`);
-    if (parts.length === 2) return parts.pop().split(';').shift();
-    return "";
-  }
-
-  function handleLoyaltyClick() {
-    const hasAccess = getCookie(cookieName);
-    if (hasAccess === "true") {
-      scrollToRegister();
-    } else {
-      openPasswordModal();
-    }
-  }
-
-  function openPasswordModal() {
-    document.getElementById("passwordModal").style.display = "flex";
-    document.getElementById("loyaltyPassword").value = "";
-    document.getElementById("passwordError").style.display = "none";
-  }
-
-  function closePasswordModal() {
-    document.getElementById("passwordModal").style.display = "none";
-  }
-
-  function checkPassword() {
-    const input = document.getElementById("loyaltyPassword").value;
-    if (input === correctPassword) {
-      setCookie(cookieName, "true", 7); // Remember for 7 days
-      closePasswordModal();
-      scrollToRegister();
-    } else {
-      document.getElementById("passwordError").style.display = "block";
-    }
-  }
-
-  function scrollToRegister() {
-    document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
-  }
-  </script>
-  <script>
-  const correctPassword = "cut2025"; // your password
-  const cookieName = "loyaltyAccess";
-
-  function setCookie(name, value, days) {
-    const d = new Date();
-    d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000));
-    const expires = "expires=" + d.toUTCString();
-    document.cookie = `${name}=${value};${expires};path=/`;
-  }
-
-  function getCookie(name) {
-    const value = `; ${document.cookie}`;
-    const parts = value.split(`; ${name}=`);
-    if (parts.length === 2) return parts.pop().split(';').shift();
-    return "";
-  }
-
-  function handleLoyaltyClick() {
-    const hasAccess = getCookie(cookieName);
-    if (hasAccess === "true") {
-      scrollToRegister();
-    } else {
-      openPasswordModal();
-    }
-  }
-
-  function openPasswordModal() {
-    document.getElementById("passwordModal").style.display = "flex";
-    document.getElementById("loyaltyPassword").value = "";
-    document.getElementById("passwordError").style.display = "none";
-  }
-
-  function closePasswordModal() {
-    document.getElementById("passwordModal").style.display = "none";
-  }
-
-  function checkPassword() {
-    const input = document.getElementById("loyaltyPassword").value;
-    if (input === correctPassword) {
-      setCookie(cookieName, "true", 7); // Remember for 7 days
-      closePasswordModal();
-      scrollToRegister();
-    } else {
-      document.getElementById("passwordError").style.display = "block";
-    }
-  }
-
-  function scrollToRegister() {
-    document.getElementById("registerSection").scrollIntoView({ behavior: "smooth" });
-  }
-  </script>
-  <!-- Password Prompt Modal -->
-<div id="passwordModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; align-items:center; justify-content:center;">
-  <div style="background:white; padding:20px; border-radius:10px; width:90%; max-width:300px; text-align:center;">
-    <h3>Enter Loyalty Password</h3>
-    <input type="password" id="loyaltyPassword" placeholder="Password" style="width:100%; padding:10px; margin:10px 0;" />
-    <div style="display:flex; justify-content:space-between; gap:10px;">
-      <button onclick="checkPassword()" style="flex:1; padding:10px; background:#222; color:white; border:none; border-radius:5px;">Submit</button>
-      <button onclick="closePasswordModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
-    </div>
-    <p id="passwordError" style="color:red; font-size:0.9em; display:none; margin-top:10px;">Incorrect password. Try again.</p>
-  </div>
-</div>
-  <!-- Password Prompt Modal -->
-<div id="passwordModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000; align-items:center; justify-content:center;">
-  <div style="background:white; padding:20px; border-radius:10px; width:90%; max-width:300px; text-align:center;">
-    <h3>Enter Loyalty Password</h3>
-    <input type="password" id="loyaltyPassword" placeholder="Password" style="width:100%; padding:10px; margin:10px 0;" />
-    <div style="display:flex; justify-content:space-between; gap:10px;">
-      <button onclick="checkPassword()" style="flex:1; padding:10px; background:#222; color:white; border:none; border-radius:5px;">Submit</button>
-      <button onclick="closePasswordModal()" style="flex:1; padding:10px; background:#bbb; border:none; border-radius:5px;">Cancel</button>
-    </div>
-    <p id="passwordError" style="color:red; font-size:0.9em; display:none; margin-top:10px;">Incorrect password. Try again.</p>
-  </div>
-</div>
 </body>
 </html>
