--- a/register.html
+++ b/register.html
@@ -238,34 +238,21 @@
     const form = document.getElementById("loyaltyForm");
 
     form.addEventListener("submit", e => {
-  e.preventDefault();
+      e.preventDefault();
+      const data = {
+        name: document.getElementById("name").value,
+        phone: document.getElementById("phone").value,
+        email: document.getElementById("email").value,
+        password: document.getElementById("regPassword").value
+      };
 
-  const data = {
-    name: document.getElementById("name").value,
-    phone: document.getElementById("phone").value,
-    email: document.getElementById("email").value,
-    password: document.getElementById("regPassword").value
-  };
-
-  fetch("https://script.google.com/macros/s/AKfycbxq9Zpzn-FBeY-huq8oJRVUU3uLqUB_TxzcDXJmYr32lIR79w7IU6Xl3cHNTRpWbetx/exec", {
-    method: "POST",
-    body: JSON.stringify(data),
-    headers: {
-      "Content-Type": "application/json"
-    }
-  })
-  .then(res => res.text())
-  .then(response => {
-    alert("Thank you! You are now registered.");
-    localStorage.setItem("registeredClient", "yes");
-    form.reset();
-    document.getElementById("registerSection").style.display = "none";
-    document.getElementById("adsSection").style.display = "block";
-  })
-  .catch(error => {
-    console.error("Error!", error.message);
-    alert("Registration failed. Please try again.");
-  });
+      alert("Thank you! You are now registered.");
+      localStorage.setItem("registeredClient", "yes");
+      localStorage.setItem("loyaltyPassword", data.password);
+      form.reset();
+      document.getElementById("registerSection").style.display = "none";
+      document.getElementById("adsSection").style.display = "block";
+    });
 
     if (localStorage.getItem("registeredClient") === "yes") {
       document.getElementById("registerSection").style.display = "none";
