--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@ button, a {
   padding-left: 20px;
   padding-right: 60px; /* create space so icon doesn't crowd text */
 }
+  <div class="first-visit-banner">
+  🎉 First Visit? Get 20% OFF your cut!  
+  <a href="#loyalty">Claim Now</a>
+</div>  
     header.scrolled { background: rgba(30, 30, 47, 0.85); }
     .menu-toggle {
       position: fixed;
