--- a/register.html
+++ b/register.html
@@ -173,16 +173,17 @@
     <p>We come to you — mobile barber services at your convenience.</p>
   </section>
 
-  <!-- Registration Form -->
-  <section class="register" id="registerSection">
-    <h2>Loyalty Points Registration</h2>
-    <form id="loyaltyForm">
-      <input type="text" id="name" placeholder="Your Full Name" required />
-      <input type="tel" id="phone" placeholder="Phone Number" required />
-      <input type="email" id="email" placeholder="Email Address (optional)" />
-      <button type="submit">Register</button>
-    </form>
-  </section>
+<!-- Registration Form -->
+<section class="register" id="registerSection">
+  <h2>Loyalty Points Registration</h2>
+  <form id="loyaltyForm">
+    <input type="text" id="name" placeholder="Your Full Name" required />
+    <input type="tel" id="phone" placeholder="Phone Number" required />
+    <input type="email" id="email" placeholder="Email Address (optional)" />
+    <input type="password" id="password" placeholder="Create Password" required />
+    <button type="submit">Register</button>
+  </form>
+</section>
 
   <!-- Ads Section -->
   <section class="ads" id="adsSection">
